--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5677,12 +5677,12 @@
                                                                                        sizes="(max-width: 55px) 100vw, 55px"/></a></span>
                                         <div class="ast-site-title-wrap">
 <span class="site-title" itemprop="name">
-<a href="{% url 'index' %}" rel="home" itemprop="url">
-Life Coach
+<a href="{% url 'contact' %}" rel="home" itemprop="url">
+Biz bilan bog'lanish
 </a>
 </span>
                                             <p class="site-description" itemprop="description">
-                                                Where Smiles Lead The Way
+                                                Qarshi shahar xokimligi
                                             </p>
                                         </div>
                                     </div>
