--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5707,9 +5707,9 @@ Biz bilan bog'lanish
                                                         <li id="menu-item-634"
                                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-634">
                                                             <a href="{% url 'work_with_me' %}" class="menu-link">Loyihalar</a></li>
-                                                        <li id="menu-item-617"
-                                                            class="menu-item menu-item-type-post_type menu-item-object-page menu-item-617">
-                                                            <a href="{% url 'books' %}" class="menu-link">Kitoblar</a></li>
+{#                                                        <li id="menu-item-617"#}
+{#                                                            class="menu-item menu-item-type-post_type menu-item-object-page menu-item-617">#}
+{#                                                            <a href="{% url 'books' %}" class="menu-link">Kitoblar</a></li>#}
                                                         <li id="menu-item-418"
                                                             class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-9 current_page_item menu-item-418">
                                                             <a href="{% url 'contact' %}" aria-current="page"
