--- a/templates/index.html
+++ b/templates/index.html
@@ -5710,9 +5710,9 @@
                                                         <li id="menu-item-634"
                                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-634">
                                                             <a href="{% url 'work_with_me' %}" class="menu-link">Loyihalar</a></li>
-                                                        <li id="menu-item-617"
-                                                            class="menu-item menu-item-type-post_type menu-item-object-page menu-item-617">
-                                                            <a href="{% url 'books' %}" class="menu-link">Kitoblar</a></li>
+{#                                                        <li id="menu-item-617"#}
+{#                                                            class="menu-item menu-item-type-post_type menu-item-object-page menu-item-617">#}
+{#                                                            <a href="{% url 'books' %}" class="menu-link">Kitoblar</a></li>#}
                                                         <li id="menu-item-418"
                                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-418">
                                                             <a href="{% url 'contact' %}" class="menu-link">Bog'lanish</a></li>
