--- a/templates/about.html
+++ b/templates/about.html
@@ -5826,8 +5826,8 @@ Biz haqimizda
                                             <a href="{% url 'about' %}" aria-current="page" class="menu-link">Biz haqimizda</a></li>
                                         <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-634">
                                             <a href="{% url 'work_with_me' %}" class="menu-link">Loyihalar</a></li>
-                                        <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-617">
-                                            <a href="{% url 'books' %}" class="menu-link">Kitoblar</a></li>
+{#                                        <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-617">#}
+{#                                            <a href="{% url 'books' %}" class="menu-link">Kitoblar</a></li>#}
                                         <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-418">
                                             <a href="{% url 'contact' %}" class="menu-link">Bog'lanish</a></li>
                                     </ul>
