--- a/templates/loyihalar.html
+++ b/templates/loyihalar.html
@@ -5922,7 +5922,7 @@ Life Coach
                                                                                     {% for loyiha in loyihalar %}
                                                                                     <li class="ast-article-single desktop-align-left tablet-align-left mobile-align-left product type-product post-401 status-publish first instock product_cat-coaching has-post-thumbnail shipping-taxable purchasable product-type-simple">
                                                                                         <div class="astra-shop-thumbnail-wrap">
-                                                                                            <a href=""
+                                                                                            <a href="{% url 'details' loyiha.pk %}"
                                                                                                class="woocommerce-LoopProduct-link woocommerce-loop-product__link">
                                                                                                 <img style="width: 350px; height: 170px"
                                                                                                     width="500"
